--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -1,7 +1,7 @@
 .about-container {
     width: 100vw;
     height: 100vh;
-    background: linear-gradient(100deg,#d900ff, #FFA500);
+    background: linear-gradient(100deg,#cb83d7, #00c3ff);
 }
 .about-heading {
     font-size: 54px;
