--- a/src/pages/Tutorials/Tutorials.css
+++ b/src/pages/Tutorials/Tutorials.css
@@ -1,7 +1,7 @@
 .tutorials-container {
     width: 100vw;
     height: 100vh;
-    background: linear-gradient(100deg, #bb00ff, #FFA500);
+    background: linear-gradient(100deg,#cb83d7, #00c3ff);
 }
 .tutorials-heading {
     font-size: 54px;
