--- a/src/pages/Yoga/Yoga.css
+++ b/src/pages/Yoga/Yoga.css
@@ -1,5 +1,5 @@
 .yoga-container {
-    background: linear-gradient(100deg,#d900ff, #FFA500);
+    background: linear-gradient(100deg,#cb83d7, #00c3ff);
     min-width: 100vw;
     min-height: 100vh;
 }
